fix font smoothing on Firefox
- add missing css prop for font smoothing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -106,6 +106,7 @@ body #__next {
   margin: 0px;
   line-height: calc(1em + 0.625rem);
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 img,
